feat: implement backend authentication
